# back

./: README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
project/: .gitignore  pyproject.toml
project/accounts/: admin.py  models.py  serializers.py  swagger.py  urls.py  views.py
project/accounts/migrations/: 0001_initial.py
project/chatbots/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
project/chatbots/migrations/: 0001_initial.py
project/config/: middleware.py  settings.py  urls.py
project/highlights/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
project/highlights/migrations/: 0001_initial.py  0002_highlight.py  0003_highlight_page_id_highlight_pdf_id.py
project/logs/: README.md
project/pdf_documents/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
project/pdf_documents/migrations/: 0001_initial.py  0002_matchedtext_pdfpage.py  0003_matchedtext_figure_id_pdfpage_pdf_id_and_more.py  0004_originpdf_s3_key_alter_originpdf_s3_url.py  0005_matchedtext_text_box.py
project/pdf_figures/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
project/pdf_figures/migrations/: 0001_initial.py
